<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">泡茶計時</string>
    <string name="action_settings">設定</string>
    <string name="strStart">開始</string>
    <string name="strZero">0000</string>
    <string name="strPause">暫停</string>
    <string name="strReset">重置</string>
    <string name="strLeave">離開</string>
    <string name="strNoSleep">不休眠</string>

    <string name="hello_setup_fragment">設定倒數秒數</string>
    <string name="strBtnSetup">設定</string>
    <string name="secHint">59</string>
</resources>
